tests/traci/set_variable/Vehicle/ChangeRoute/invalidOnInternal/testclient.prog
repeat 58 simstep2 0
setvalue 0xc4 0x57 veh0 <string*> 2 e_m6 e_shape0
simstep2 100
